--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html ng-app="eCommerce">
   <head>
     <meta charset="utf-8">
-    <title>Teeth Store</title>
+    <title>Blah Store</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body ng-controller="teethCtrl">
     <header>
-      <h1>Welcome to the Teeth Store!</h1>
+      <h1>Welcome to the Blah Store!</h1>
     </header>
     <div class="nav">
       <a ui-sref="addmodify">Admin</a>
@@ -18,7 +18,7 @@
     </div>
 
     <footer>
-      <p>All rights reserved. Teeth Store. Copyright 2016.</p>
+      <p>All rights reserved. Blah Store. Copyright 2016.</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
