--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Blah Store</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body ng-controller="teethCtrl">
+  <body ng-controller="blahCtrl">
     <header>
       <h1>Welcome to the Blah Store!</h1>
     </header>
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="controllers/app.js" charset="utf-8"></script>
-    <script src="controllers/teethCtrl.js" charset="utf-8"></script>
-    <script src="controllers/teethService.js" charset="utf-8"></script>
+    <script src="controllers/blahCtrl.js" charset="utf-8"></script>
+    <script src="controllers/blahService.js" charset="utf-8"></script>
   </body>
 </html>
