--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       </h1>
     </header>
     <div class="nav">
-      <a ui-sref="addmodify">Admin</a>
+      <a ui-sref="addmodify">Admin | </a>
       <a ui-sref="sell">Buy Now</a>
     </div>
     <div class="container">
