Changed controler names.

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
-  <body ng-controller="blahCtrl">
+  <body ng-controller="baconCtrl">
     <header>
       <h1>Welcome to Dumpster Bacon!
       <i class="icon-food"></i>
       </h1>
     </header>
     <div class="nav">
-      <a ui-sref="addmodify">Admin | </a>
+      <a ui-sref="addmodify">Admin</a>
       <a ui-sref="sell">Buy Now</a>
     </div>
     <div class="container">
@@ -26,7 +26,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="controllers/app.js" charset="utf-8"></script>
-    <script src="controllers/blahCtrl.js" charset="utf-8"></script>
-    <script src="controllers/blahService.js" charset="utf-8"></script>
+    <script src="controllers/baconCtrl.js" charset="utf-8"></script>
+    <script src="controllers/baconService.js" charset="utf-8"></script>
   </body>
 </html>
